# mcp-server-qdrant-rag

./: .dockerignore  .env.example  DEVELOPMENT.md  Dockerfile  Makefile  README.md  SETS_CONFIGURATION.md  docker-compose.yml  pyproject.toml  qdrant_sets.example.json
src/mcp_server_qdrant/: mcp_server.py  qdrant.py  settings.py
src/mcp_server_qdrant_rag/: __main__.py  (+7 more)
tests/: CLI_TEST_SUITE_SUMMARY.md  demo_embedding_intelligence.py  test_backward_compatibility.py  test_chunked_storage_integration.py  test_cli_argument_parsing.py  test_cli_comprehensive_integration.py  test_cli_comprehensive_suite.py  test_cli_configuration_management.py  test_cli_embedding_integration.py  test_cli_error_handling.py  test_cli_error_scenarios.py  test_cli_main_integration.py  test_cli_metadata_arguments.py  test_cli_operations.py  test_cli_performance.py  test_cli_qdrant_integration.py  test_compatibility_tool.py  test_comprehensive_integration.py  test_configuration_logging.py  test_configuration_parsing.py  test_content_processor.py  test_default_configuration.py  test_document_chunk.py  test_document_chunk_model.py  test_document_chunker.py  test_dynamic_dimensions.py  test_embedding_model_intelligence.py  test_end_to_end_workflows.py  test_enhanced_search.py  test_entry_metadata_integration.py  test_entry_model.py  test_error_handling.py  test_error_handling_validation.py  test_fastembed_integration.py  test_file_discovery.py  test_mcp_search_set_filtering.py  test_model_switching_integration.py  test_model_validation.py  test_progress_reporting.py  test_qdrant_integration.py  (+7 more)
(+12 files in other folders)
